--- a/signup.html
+++ b/signup.html
@@ -55,7 +55,7 @@
     });
 
      // Retrieve the users passed from the server
-     const users = <%- JSON.stringify(users) %>;
+     const users = JSON.stringify(users);
 
     // Display the users in the list
     const usersList = document.getElementById('users-list');
